--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -178,7 +178,7 @@
 
 \vspace{5mm}
 {\bf Hora de c\'atedra}: M y W (10:15---11:45).\\
-{\bf Lugar de c\'atedra}: Zoom (no hay clases presenciales este semestre).\\
+{\bf Modalidad}: H\'ibrida (algunas actividades por Zoom y otras presenciales).\\
 
 %{\bf Acceso a materiales del curso}: \href{https://ucampus.uoh.cl/uoh/2020/2/APU3602/1/}{\texttt{aqu\'i}}.
 
@@ -187,7 +187,7 @@
 \texttt{e:}\href{mailto:gonzalo.barria@uoh.cl}{\texttt{gonzalo.barria@uoh.cl}}\\
 {\bf TA Bio}: Gonzalo Barr\'ia es Cientista Pol\'itico (PUC) y Mag\'ister en Ciencia Pol\'itica (PUC).\\
 {\bf Hora de ayudant\'ia}: TBA.\\
-{\bf Lugar de ayudant\'ia}: TBA.\\
+{\bf Lugar de ayudant\'ia}: Campus Rancagua.\\
 
 
 %\vspace{5mm}
@@ -298,7 +298,7 @@ Al final del curso, los/las estudiantes deber\'an ser capaces de,
 
 \subsection*{Metodolog\'ias}
 
-Clases tipo seminario v\'ia Zoom.
+Clases tipo seminario v\'ia Zoom y presenciales (modalidad h\'ibrida).
 
 \subsection*{Requisitos de Aprobaci\'on y Evaluaciones del Curso}
 
@@ -307,18 +307,18 @@ Clases tipo seminario v\'ia Zoom.
 	% Participation
 	\item {\bf Lecturas y Participaci\'on}: 15\%.
 
-		El TA y yo asumiremos durante todo el semestre que has le\'ido. Nosotros empleamos un m\'etodo de clases interactivo, pero este m\'etodo necesita de tu participaci\'on activa en clases.
+		El TA y yo asumiremos durante todo el semestre que haz le\'ido. Nosotros empleamos un m\'etodo de clases interactivo, pero este m\'etodo necesita de tu participaci\'on activa en clases.
 		\\
 		\\	
 		Si no puedes asistir a la clase sincr\'onica, existir\'an opciones para dejar entradas en la secci\'on \emph{Foro} de \texttt{uCampus}.
 	
   \item {\bf Midterm}: 25\%.
 
-		De un set de tres preguntas, escoger\'as una, y tendr\'as una semana para desarrollar tu respuesta. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Todos los textos, discusiones y ayudant\'ias podr\'ian ser consideradas. Las preguntas ser\'an relacionales. Lo que gu\'ia la pregunta (y la respuesta) es un tema. No un texto en particular. Es individual. Deber\'as entregar el ensayo en \texttt{uCampus}. Llegado el momento, se discuntir\'an los pormenores en clases y ayudant\'ia. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. Cuando comiences a prepararte, el ayudante y el profesor estar\'an disponibles para responder preguntas.
+		De un set de tres preguntas, escoger\'as una. La prueba se tomar\'a de manera presencial y en horario de clases. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Todos los textos, discusiones y ayudant\'ias podr\'ian ser consideradas. Las preguntas ser\'an relacionales. Lo que gu\'ia la pregunta (y la respuesta) es un tema. No un texto en particular. Es individual. Llegado el momento, se discuntir\'an los pormenores en clases y ayudant\'ia. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. 
 
 	\item {\bf Ensayo Final (obligatorio; no eximible)}: 30\%. 
 
-	Durante la \'ultima clase se entregar\'a un temario de preguntas (de nuevo, enfocadas en temas m\'as que textos particulares). Tendr\'as que escoger una, y desarrollarla en formato ensayo \emph{in extenso}. Es individual. Deber\'as entregar el ensayo en \texttt{uCampus}. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. El ayudante y el profesor estar\'an disponibles para responder preguntas.
+	   De un set de tres preguntas, escoger\'as una. La prueba se tomar\'a de manera presencial y en horario de clases. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Todos los textos, discusiones y ayudant\'ias podr\'ian ser consideradas. Las preguntas ser\'an relacionales. Lo que gu\'ia la pregunta (y la respuesta) es un tema. No un texto en particular. Es individual. Llegado el momento, se discuntir\'an los pormenores en clases y ayudant\'ia. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso.
 
 	\item {\bf Exposiciones individuales}: dos en total, 15\% cada una, 30\% en total.
 
