--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -178,7 +178,7 @@
 
 \vspace{5mm}
 {\bf Hora de c\'atedra}: M y W (10:15---11:45).\\
-{\bf Modalidad}: H\'ibrida (algunas actividades por Zoom y otras presenciales).\\
+{\bf Modalidad}: Clases por Zoom.\\
 
 %{\bf Acceso a materiales del curso}: \href{https://ucampus.uoh.cl/uoh/2020/2/APU3602/1/}{\texttt{aqu\'i}}.
 
@@ -187,7 +187,7 @@
 \texttt{e:}\href{mailto:gonzalo.barria@uoh.cl}{\texttt{gonzalo.barria@uoh.cl}}\\
 {\bf TA Bio}: Gonzalo Barr\'ia es Cientista Pol\'itico (PUC) y Mag\'ister en Ciencia Pol\'itica (PUC).\\
 {\bf Hora de ayudant\'ia}: TBA.\\
-{\bf Lugar de ayudant\'ia}: Campus Rancagua.\\
+{\bf Lugar de ayudant\'ia}: Zoom.\\
 
 
 %\vspace{5mm}
@@ -314,11 +314,11 @@ Clases tipo seminario v\'ia Zoom y presenciales (modalidad h\'ibrida).
 	
   \item {\bf Midterm}: 25\%.
 
-		De un set de tres preguntas, escoger\'as una. La prueba se tomar\'a de manera presencial y en horario de clases. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Todos los textos, discusiones y ayudant\'ias podr\'ian ser consideradas. Las preguntas ser\'an relacionales. Lo que gu\'ia la pregunta (y la respuesta) es un tema. No un texto en particular. Es individual. Llegado el momento, se discuntir\'an los pormenores en clases y ayudant\'ia. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. 
+		De un set de tres preguntas, escoger\'as una. La prueba se tomar\'a de manera presencial y en horario de clases. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Todos los textos, discusiones y ayudant\'ias podr\'ian ser consideradas. Las preguntas ser\'an relacionales. Lo que gu\'ia la pregunta (y la respuesta) es un tema. No un texto en particular. Es individual. Llegado el momento, se discuntir\'an los pormenores en clases y ayudant\'ia. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. El ensayo se entregar\'a en \texttt{uCampus}. No se aceptar\'an atrazos.
 
 	\item {\bf Ensayo Final (obligatorio; no eximible)}: 30\%. 
 
-	   De un set de tres preguntas, escoger\'as una. La prueba se tomar\'a de manera presencial y en horario de clases. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Todos los textos, discusiones y ayudant\'ias podr\'ian ser consideradas. Las preguntas ser\'an relacionales. Lo que gu\'ia la pregunta (y la respuesta) es un tema. No un texto en particular. Es individual. Llegado el momento, se discuntir\'an los pormenores en clases y ayudant\'ia. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso.
+	   De un set de tres preguntas, escoger\'as una. La prueba se tomar\'a de manera presencial y en horario de clases. Entregas atrasadas tendr\'an un 1 autom\'aticamente, sin excepciones. Todos los textos, discusiones y ayudant\'ias podr\'ian ser consideradas. Las preguntas ser\'an relacionales. Lo que gu\'ia la pregunta (y la respuesta) es un tema. No un texto en particular. Es individual. Llegado el momento, se discuntir\'an los pormenores en clases y ayudant\'ia. Preoc\'upate de usar referencias correctamente. S\'olo podr\'as referenciar el material cubierto en este curso. El ensayo se entregar\'a en \texttt{uCampus}. No se aceptar\'an atrazos.
 
 	\item {\bf Exposiciones individuales}: dos en total, 15\% cada una, 30\% en total.
 
@@ -418,7 +418,7 @@ Aqu\'i tendr\'as otra oportunidad para ejercitar y seguir profundizando otras te
 
 					\item[{\Pointinghand}] {\bf El caso Chileno (\emph{paper} sugerido):}
 									\begin{enumerate}
-										\item Paul Reinsch. 1909. \href{https://github.com/hbahamonde/Ciencia_Politica_I/raw/master/Readings/Reinsch_1909.pdf}{``Parliamentary Government in Chile.''} \emph{American Political Science Review}, 3(4): 507---538.\phantom{\textcite{Reinsch1909}}
+										\item Paul Reinsch. 1909. \href{https://github.com/hbahamonde/Ciencia_Politica_I/raw/master/Readings/reinsch1909.pdf}{``Parliamentary Government in Chile.''} \emph{American Political Science Review}, 3(4): 507---538.\phantom{\textcite{Reinsch1909}}
 									\end{enumerate}
 
 				\end{itemize}
@@ -492,7 +492,7 @@ Aqu\'i tendr\'as otra oportunidad para ejercitar y seguir profundizando otras te
 
 		\end{itemize}
 
-\item[{\color{red}\Pointinghand}] Ensayo midterm. Entra todo lo visto y discutido hasta el momento.
+\item[{\color{red}\Pointinghand}] Ensayo midterm. Entra todo lo visto y discutido hasta el momento. Una semana de plazo.
 
 
 	\item {\color{ForestGreen}{\bf \underline{Desarrollo Capitalista y La Econom\'ia Pol\'itica de la Formaci\'on del Estado}}}
@@ -503,7 +503,7 @@ Aqu\'i tendr\'as otra oportunidad para ejercitar y seguir profundizando otras te
 					%\item[$\circ$]  Douglass North. 1990. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North.pdf}{\emph{Institutions, Institutional Change and Economic Performance}}. Cambridge University Press. ``Part 1: Institutions'': 3---69.\phantom{\textcite{North1990}}
 
 					% dar este y no North1990
-         \item[$\circ$]  Douglass North. 1981. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North_1981.pdf}{\emph{Structure and Change in Economic History}}. W.W. Norton. ``Part I: Theory'': 3---71.\phantom{\textcite{North1981}}
+         \item[$\circ$]  Douglass North. 1981. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/North_1982.pdf}{\emph{Structure and Change in Economic History}}. W.W. Norton. ``Part I: Theory'': 3---71.\phantom{\textcite{North1981}}
          			
          \item[$\circ$] Cheryl Schonhardt-Bailey. 2006. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Corn_Laws.pdf}{\emph{From the Corn Laws to Free Trade: Interests, Ideas, and Institutions in Historical Perspective}}. The MIT Press. Ch. 1\phantom{\textcite{Schonhardt-Bailey2006}}
         \end{itemize}
@@ -616,7 +616,7 @@ Aqu\'i tendr\'as otra oportunidad para ejercitar y seguir profundizando otras te
 
 		\end{itemize}
 
-\item[{\color{red}\Pointinghand}] Ensayo Final. Entra todo lo visto y discutido hasta el momento, hasta la ultima evaluaci\'on.
+\item[{\color{red}\Pointinghand}] Ensayo Final. Entra todo lo visto y discutido hasta el momento, hasta la ultima evaluaci\'on. Una semana de plazo.
 
 \end{enumerate}
 
