changes title of lecture

--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -392,7 +392,7 @@ Aqu\'i tendr\'as otra oportunidad para ejercitar y seguir profundizando otras te
 					\item[$\circ$] Joseph Strayer. 1970. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Strayer.pdf}{\emph{On the Medieval Origins of the Modern State}}. Princeton University Press. Ch. 1.\phantom{\textcite{Strayer1970}}
 				\end{itemize}
 
-			\item[4.] {\bf Formaci\'on del Estado: El Caso Latinoamericano}.
+			\item[4.] {\bf Formaci\'on del Estado: la guerra y el caso Latinoamericano}.
 				\begin{itemize}
 					\item[$\circ$] Miguel \'Angel Centeno. 1997. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Centeno.pdf}{``Blood and Debt: War and Taxation in Nineteenth-Century Latin America.''} \emph{American Journal of Sociology}, 102(6): 1565---1605.\phantom{\textcite{Centeno1997}} 
 
