--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -143,9 +143,8 @@
 \vspace{0.25in}
 
 \begin{minipage}{0.45\linewidth}
- Universidad de O$'$Higgins \\
-  Instituto de Ciencias Sociales \\
-  Rancagua, Chile\\
+ University of Turku \\
+  Turku, Finland\\
   \\
   \\
 
