changes refwork for reading

--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -424,7 +424,7 @@ Aqu\'i tendr\'as otra oportunidad para ejercitar y seguir profundizando otras te
 
 		\item[7.] {\bf Independencia e Instituciones Post-Coloniales de ``State-building''}.
 				\begin{itemize}
-					\item[$\circ$]  Marcus Kurtz. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kurtz_2013.pdf}{\emph{Latin American State-Building in Comparative Perspective: Social Foundations of Institutional Order}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Kurtz:2013aa}}
+					\item[$\circ$]  Marcus Kurtz. 2013. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Kurtz_2013.pdf}{\emph{Latin American State-Building in Comparative Perspective: Social Foundations of Institutional Order}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Kurtz2013}}
 					
           \item[$\circ$]  Hillel Soifer. 2015. \href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Soifer.pdf}{\emph{State Building in Latin America}}. Cambridge University Press. Ch. 2.\phantom{\textcite{Soifer2015a}}
 				\end{itemize}
