--- a/Tests/Midterm/Midterm_CP_2.tex
+++ b/Tests/Midterm/Midterm_CP_2.tex
@@ -210,11 +210,11 @@ Este es el temario para el ensayo \emph{midterm}. {\input{/Users/hectorbahamonde
 \subsection*{{\bf Escoge una pregunta:}}
 
 \begin{enumerate}
-  \item \textcite{Sokoloff:2000ug} y \textcite{Acemoglu:2002uh} explican el rol de las instituciones en la construcci\'on del estado en Am\'erica Latina. En media p\'agina explica ambas teor\'ias. Ahora, por un lado, algunos autores ponen \'enfasis en el periodo colonial/pre-colonial \parencite{Haber1991,Mahoney:2010aa} mientras que otros ponen \'enfasis en el periodo \emph{post}-colonial \parencite{Kurtz:2013aa,Soifer2015a}. Explica en media p\'agina de qu\'e se tratan ambos enfoques. En el resto de tu ensayo toma una posici\'on respecto de qu\'e \emph{timing}---pre-colonial/colonial o post-colonial---responde mejor a los distintos niveles de desarrollo pol\'itico-ec\'onomico en las Am\'ericas que vemos hoy.
+  \item \textcite{Sokoloff:2000ug} y \textcite{Acemoglu:2002uh} explican el rol de las instituciones en la construcci\'on del estado en Am\'erica Latina. En media p\'agina explica ambas teor\'ias. Ahora, por un lado, algunos autores ponen \'enfasis en el periodo colonial/pre-colonial \parencite{Haber1991,Mahoney:2010aa} mientras que otros ponen \'enfasis en el periodo \emph{post}-colonial \parencite{Kurtz2013,Soifer2015a}. Explica en media p\'agina de qu\'e se tratan ambos enfoques. En el resto de tu ensayo toma una posici\'on respecto de qu\'e \emph{timing}---pre-colonial/colonial o post-colonial---responde mejor a los distintos niveles de desarrollo pol\'itico-ec\'onomico en las Am\'ericas que vemos hoy.
 
   \item Las ``preparaciones para la guerra'' \parencite{Tilly1985} y el \emph{robo organizado} \parencite{Olson1993} parecen ser condiciones necesarias para explicar la formaci\'on del estado moderno. En una p\'agina explica c\'omo el elemento \emph{violencia organizada} presente en ambas teor\'ias conecta (o no) con la recolecci\'on de impuestos directos. En lo que sigue de tu ensayo critica este enfoque (llamado ``belicista'') a la luz de \textcite{Strayer1970} y \textcite{Centeno1997}, y adopta una posici\'on respecto de si las teor\'ias ``belicistas'' nos ayudan (o no) a explicar el origen del estado Latino Americano.
 
-  \item Un componente importante de los estados es su ``poder infraestructural'' \parencite{Mann2008a} ya que permite ``transmitir'' (i.e. \emph{broadcast}) el poder \parencite{Herbst2015}. En una p\'agina explica por qu\'e la dimensi\'on espacial/territorial es tan importante (o no). No olvides mencionar ejemplos concretos abordados en las lecturas mencionadas. En el resto del ensayo, elabora un argumento en el que convenzas a tu lector de por qu\'e los estados no siempre est\'an interesados en ``transmitir'' ese poder a lo largo y ancho del territorio. Ap\'oyate en \textcite{Brinks2020}. En esta parte incorpora un breve ejemplo (un p\'arrafo) de la realidad chilena.
+  \item Un componente importante de los estados es su ``poder infraestructural'' \parencite{Mann1984} ya que permite ``transmitir'' (i.e. \emph{broadcast}) el poder \parencite{Herbst2015}. En una p\'agina explica por qu\'e la dimensi\'on espacial/territorial es tan importante (o no). No olvides mencionar ejemplos concretos abordados en las lecturas mencionadas. En el resto del ensayo, elabora un argumento en el que convenzas a tu lector de por qu\'e los estados no siempre est\'an interesados en ``transmitir'' ese poder a lo largo y ancho del territorio. Ap\'oyate en \textcite{Brinks2020}. En esta parte incorpora un breve ejemplo (un p\'arrafo) de la realidad chilena.
 
 \end{enumerate}
 
