--- a/Bahamonde_Ciencia_Politica_II.tex
+++ b/Bahamonde_Ciencia_Politica_II.tex
@@ -567,7 +567,7 @@ Aqu\'i tendr\'as otra oportunidad para ejercitar y seguir profundizando otras te
          
           % dar este en vez de Alesina's, pero ver bien que capitulo
           
-          \item[$\circ$] Theda Skocpol. 1995.\href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Skocpol_1995.pdf}{``Protecting Soldiers and Mothers: The Political Origins of Social Policy in United States''} Harvard University Press: Introduction, Understanding the Origins of Modern Social Provision in the United States.%\phantom{\textcite{Alesina2001}}
+          \item[$\circ$] Theda Skocpol. 1995.\href{https://github.com/hbahamonde/Ciencia_Politica_II/raw/master/Readings/Skocpol_1995.pdf}{``Protecting Soldiers and Mothers: The Political Origins of Social Policy in United States''} Harvard University Press: Introduction, Understanding the Origins of Modern Social Provision in the United States.\phantom{\textcite{Skocpol1995}}
 
           % O dar Trasberg-Bahamonde.
 
